# auth-visage-backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0ae3bdc1f5e8_create_user_project_link_table.py  19e4fcf54e48_add_rls_to_projects_table.py  1aa1b824b5ae_create_oauth_schema_and_tables.py  203685e43b63_add_rls_to_user_project_link_table.py  2f48b943bcd6_create_storage_buckets.py  33e5105ab73d_auto_generate_timestamps_in_db.py  341cf6806d6f_add_rls_to_face_table.py  4af69e22476a_create_face_table.py  75b3b8c261c1_create_project_table.py  85f149c01a03_initial_commit.py  8cfc04a2075e_create_trusted_origin_table.py  a6238d3693bd_add_rls_to_trusted_origin_table.py  a6e4e460511c_auto_generate_uuids_in_db.py  be7b7d70218e_add_rls_to_backend_only_tables.py  c9e60285f45e_add_face_orientations.py  d38b7aea9b8d_set_owner_id_default_to_use_auth_uid.py  e98af29b68d7_create_authcode_table.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  items.py  oauth.py  projects.py  trusted_origins.py  users.py  ws_no_prefix.py
backend/app/core/: auth.py  config.py  db.py  security.py  socket_io.py
backend/app/crud/: __init__.py  base.py  crud_auth_code.py  crud_face.py  crud_oauth_refresh_token.py  crud_oauth_session.py  crud_project.py  crud_trusted_origin.py  crud_user_project_link.py
backend/app/models/: __init__.py  auth_code.py  base.py  face.py  item.py  oauth_refresh_token.py  oauth_session.py  project.py  refresh_token.py  session.py  trusted_origin.py  user_project_link.py
backend/app/schemas/: __init__.py  auth.py
backend/app/utils/: __init__.py  cache_models.py  cahe_models.py  detection.py  errors.py
backend/app/utils/antispoofing/: inference.py
backend/scripts/: format.sh  lint.sh
scripts/: update-env.sh
supabase/: config.toml
